--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
 <script src="./p5.play.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDwm-bO2jF6W8UIfn-cmbwshCqtT4nDSlc",
+    authDomain: "asynchronousballmovement-54a81.firebaseapp.com",
+    databaseURL: "https://asynchronousballmovement-54a81.firebaseio.com",
+    projectId: "asynchronousballmovement-54a81",
+    storageBucket: "asynchronousballmovement-54a81.appspot.com",
+    messagingSenderId: "498790025365",
+    appId: "1:498790025365:web:b6498b19cf931e287eb39c"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
